<resources>
    <string name="app_name">STDController</string>
    <string name="connect_layout">Connect Layout</string>
    <string name="OffBtn">OFF</string>
    <string name="OnBtn">ON</string>
    <string name="tvShow">显示</string>
    <string name="tvContentDS">显示时间</string>
    <string name="tempBtn">获取温度</string>
    <string name="send">发送</string>
    <string name="intBtn">显示数字1-8</string>
    <string name="AFBtn">显示A-F</string>
    <string name="tvTip">提示</string>

    <string name="connectBtn">连接</string>
    <string name="stopBtn">断开</string>

    <string name="ad1Btn">电位器</string>
    <string name="ad2Btn">热敏电阻</string>
    <string name="ad3Btn">光敏电阻</string>


</resources>
