<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_connect_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#11000000"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/connect_layout" />

        <Button
            android:id="@+id/connectBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connectBtn" />

        <Button
            android:id="@+id/stopBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stopBtn" />

</LinearLayout>
