<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_ds_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#11000000"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="DS Layout" />

    <Button
        android:id="@+id/OnTouchBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/OnBtn" />

    <Button
        android:id="@+id/OffBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/OffBtn" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvContentDS" />
</LinearLayout>

