<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_adda_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#11000000"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="ADDA Layout" />

    <Button
        android:id="@+id/ad1Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ad1Btn" />

    <Button
        android:id="@+id/ad2Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ad2Btn" />

    <Button
        android:id="@+id/ad3Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ad3Btn" />

    <TextView
        android:id="@+id/tvADcontent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>